
    * src/widgets/geda_menu_button.c: Convert plain source documentation to Doxygen
      documentation for properties:

          * "default-outside-border"
          * "inner-border"

    * src/widgets/geda_menu_item.c: Reorganizing geda_menu_item_class_init;
      replocate properties before signals. Update existing property documentation
      format.

2020-01-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_bulb.c: Add internal source documentation:

          * get_coordinates
          * left_right_compare
          * up_down_compare
          * geda_bulb_focus

    * src/widgets/geda_option_menu.c: Add "changed" signal documentation.

    * src/widgets/geda_radio_menu_item.c: Revise geda_radio_menu_item_new_with_
      label_from_widget to only validate the group argument is a GedaRadioMenuItem
      when group is nun NULL.

2020-01-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_handlebox.c: Use ancillary pointer to parent window in
      function geda_handle_box_realize.

    * src/widgets/geda_menu_item.c: Validate the menu item argument and update
      function documentation:

          * geda_menu_item_get_mnemonic
          * geda_menu_item_set_mnemonic

    * src/widgets/geda_radio_menu_item.c: Revise geda_radio_menu_item_set_group
      to not validate the radio_menu_item is not already in the group if group
      is NULL, and thus allowing the group argument to be NULL.

2020-01-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Update function documentation:

          * geda_image_menu_item_get_accel_group

    * src/widgets/geda_menu_shell.c: Revise/update signal documentation format.
      Update function documentation:

          * geda_menu_shell_insert

2020-01-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_button.c: Convert and update signal documentation.

    * src/widgets/geda_menu_shell.c: Add ancillary type = GEDA_TYPE_MENU_SHELL,